0.4.11
- Change: Change the German record type label "Veranstaltungsreihe: Datum" to "Veranstaltungsreihe: Termin" (#595), patch by Simon Harhues
- Fix: Remove all static calls to t3lib_pageSelect::enableFields() (#764)
- Change: Allow up to 9999 vacancies (#756)
- Fix: Missing additional link parameters (e.g. target) in seminar place, speaker and organizer records (#682)
- Fix: Subject in confirmation mail is scrambled (#285)
- Fix: E-mails are empty if a HTML template is selected via flexforms (#710)

0.4.10 (released 2007-03-22)
- Change: Events with a maximal number of 0 vacancies should be considered to not require registration (#703)
- Change: Speed up the back-end modules with caching (#670, #672)
- Change: Make the sorting order of events in the BE configurable (#517)
- Code cleanup and refactoring (#665)
- Fix: Config check warning in mod1 in about any folder (#592)
- Fix: In mod2, lowercase POST (#597)
- Change: Move the "needs registration" checkbox from the date records to the topic records (#651)
- Fix: Problem with creation of new event records (#648)

0.4.9 (released 2007-03-06)
- Fix: Wrong reset of a field in TCE checking (#605)
- Change: Lower the TYPO3 version requirement to 3.7 (#631)
- Fix: Allow for searching also within organizer names (#352)
- Feature: Update statistics every time an event record gets saved (#242)
- Code cleanup and refactoring (#576, #570)
- Fix: In mod1, lowercase POST (#597)
- Fix: Configuration check on the wrong object in pi1::createRegistrationsList() (#584)
- Fix: Typo in pi1/locallang.xml (#583)
- Fix: Ordering of seminars doesn't work with MySQL Version 4.1.21 (#500)
- Fix: Crash of TYPO3 4.1 after setting plugin.tx_seminars.attendancesPID (#530)

0.4.8 (released 2007-01-19)
- Feature: Added some checking for the early bird prices and the deadline (#335)
- Fix: Deletion of content elements in front-end editing mode fails (#322)
- Fix: Localisation for early bird prices (#325)