@@ -132,6 +132,11 @@ class tx_seminars_pi1 extends tx_seminars_templatehelper {
 	);
 
 	/**
+	 * An array of hook objects for this class.
+	 */
+	var $hookObjects = array();
+
+	/**
 	 * Displays the seminar manager HTML.
 	 *
 	 * @param	string		default content string, ignore
@@ -148,6 +153,7 @@ class tx_seminars_pi1 extends tx_seminars_templatehelper {
 		$this->getTemplateCode();
 		$this->setLabels();
 		$this->setCSS();
+		$this->getHookObjects();
 
 		// include CSS in header of page
 		if ($this->hasConfValueString('cssFile', 's_template_special')) {
@@ -573,6 +579,13 @@ class tx_seminars_pi1 extends tx_seminars_templatehelper {
 			}
 
 			$this->setMarkerContent('backlink', $this->pi_list_linkSingle($this->pi_getLL('label_back', 'Back'), 0));
+
+			// modify single view hook
+			foreach ($this->hookObjects as $hookObject) {
+				if (method_exists($hookObject, 'modifySingleView')) {
+					$hookObject->modifySingleView($this);
+				}
+			}
 
 			$result = $this->substituteMarkerArrayCached('SINGLE_VIEW');
 		} else {
@@ -1264,6 +1277,22 @@ class tx_seminars_pi1 extends tx_seminars_templatehelper {
 		}
 
 		return $result;
+	}
+
+	/**
+	 * Gets all hook objects for this class.
+	 *
+	 * @access	private
+	 */
+	function getHookObjects() {
+		$extensionConfiguration =& $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'];
+		$hooks =& $extensionConfiguration['seminars/pi1/class.tx_seminars_pi1.php']['hooks'];
+		if (is_array($hooks)) {
+			foreach ($hooks as $classReference) {
+				$this->hookObjects[] = t3lib_div::getUserObj($classReference);
+			}
+		}
+		return;
 	}
 }
 
